# SierpChain

./: .gitignore  CONTRIBUTING.md  Cargo.toml  QuickStart.sh  README.md  blockchain.json  bootstrap_node_info.txt
frontend/: Cargo.toml  index.html  manifest.json  style.css  sw.js
frontend/src/: lib.rs  main.rs
src/: block.rs  fractal.rs  main.rs  p2p.rs  transaction.rs  wallet.rs  ws.rs
src/api/: handlers.rs  mod.rs  websocket.rs
src/blockchain/: block.rs  chain.rs
src/core/: fractal.rs  mod.rs  transaction.rs
src/fractal/: julia.rs  mandelbrot.rs  mod.rs  sierpinski.rs  utils.rs
src/mining/: miner.rs
src/network/: p2p.rs
src/src/: block.rs
