[package]
name = "sierpchain"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
actix-cors = "0.7.0"

