[package]
name = "sierpchain"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
tokio = { version = "1", features = ["full"] }
actix-cors = "0.7.0"
libp2p = { version = "0.52.0", features = ["gossipsub", "mdns", "noise", "tcp", "macros", "yamux", "tokio"] }
once_cell = "1.18.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
ed25519-dalek = { version = "2.0.0", features = ["serde", "rand_core"] }
rand = "0.8"
bs58 = "0.5.0"
hex = "0.4"
clap = { version = "4.3.10", features = ["derive"] }

[dev-dependencies]
actix-web = { version = "4" }
actix-http = "3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
