[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = { version = "0.4.0", features = ["http"] }
wasm-bindgen = "0.2"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
ws_stream_wasm = "0.7.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-logger = "0.2"
log = "0.4"
