[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.4.0"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
wasm-logger = "0.2"
log = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlSelectElement",
    "ImageData",
] }
futures = "0.3"
serde_json = "1.0"


[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.2"
